vimrc: vim tabs: added ctrl key shortcuts

--- a/.aliasrc
+++ b/.aliasrc
@@ -3,3 +3,4 @@
 alias sl=ls
 alias rbenv="source ~/envs/reviewboard/bin/activate"
 alias rbserv="cd ~/src/reviewboard; ./contrib/internal/devserver.py"
+alias p=python
