--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,8 +1,8 @@
 # Movement
-bind -r h select-pane -L
-bind -r l select-pane -R
-bind -r j select-pane -D
-bind -r k select-pane -U
+bind h select-pane -L
+bind l select-pane -R
+bind j select-pane -D
+bind k select-pane -U
 
 # Resizing (mouse also works)
 bind -r H resize-pane -L 10
@@ -12,17 +12,13 @@ bind -r K resize-pane -U 10
 
 # Splits
 unbind %
-bind - split-window -v
-bind | split-window -h
+bind - split-window -v -c '#{pane_current_path}'
+bind | split-window -h -c '#{pane_current_path}'
 
 # Mouse
-set-window-option -g mode-mouse on
-set-option -g mouse-select-window on
-set-option -g mouse-select-pane on
-set-option -g mouse-utf8 on
+set -g mouse on
 
 # Status Bar
-set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
 set -g status-interval 60
